--- a/languages/wp-app-craft.pot
+++ b/languages/wp-app-craft.pot
@@ -14,7 +14,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Loco https://localise.biz/\n"
 "X-Loco-Version: 2.6.4; wp-6.2.2\n"
-"X-Domain: app-craft"
+"X-Domain: wp-app-craft"
 
 #: includes/admin/index.php:117
 msgid ""
